@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: format.test,v 1.16.2.6 2006/04/28 16:09:41 dgp Exp $
+# RCS: @(#) $Id: format.test,v 1.16.2.7 2008/01/10 16:46:30 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -552,6 +552,10 @@ test format-19.1 {
     set x 0x8fedc654
     list [expr { ~ $x }] [format %08x [expr { ~$x }]]
 } -match regexp -result {-2414724693 f*701239ab}
+
+test format-19.2 {Bug 1867855} {
+    format %llx 0
+} 0
 
 # cleanup
 catch {unset a}
